--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-Flack/Supporting Files/Flack-Bridging-Header.h
-Flack/Supporting Files/SWRevealViewController.h
-Flack/Supporting Files/SWRevealViewController.m
+Flack-Bridging-Header.h
+SWRevealViewController.h
+SWRevealViewController.m
